Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -657,7 +657,8 @@
       "\tEpoch: 69\tTrain loss: 0.03\tTrain Acc: 99.034875\n",
       "\tEpoch: 69\tTest loss: 1.759\tTest Acc: 78.945255\n",
       "==========================\n",
-      "Epoch: 70 i : 348 and loss: 0.033 acc: 0.9921875\r"
+      "\tEpoch: 70\tTrain loss: 0.026\tTrain Acc: 99.17655\n",
+      "Epoch: 70 i : 70 and loss: 1.565 acc: 0.7968755\r"
      ]
     }
    ],
