--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -658,7 +658,9 @@
       "\tEpoch: 69\tTest loss: 1.759\tTest Acc: 78.945255\n",
       "==========================\n",
       "\tEpoch: 70\tTrain loss: 0.026\tTrain Acc: 99.17655\n",
-      "Epoch: 70 i : 70 and loss: 1.565 acc: 0.7968755\r"
+      "\tEpoch: 70\tTest loss: 1.846\tTest Acc: 78.325255\n",
+      "==========================\n",
+      "Epoch: 71 i : 65 and loss: 0.003 acc: 1.0921875\r"
      ]
     }
    ],
