--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1158,7 +1158,10 @@
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 64.63068181818181\tLoss: 3.032\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 61.07954545454545\tLoss: 3.316\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 49.36079545454545\tLoss: 5.471\n",
-      "Coord: [ 0.4 -0.5]\tAcc: 41\tLoss: 9.098\r"
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 34.80113636363637\tLoss: 9.307\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 19.886363636363637\tLoss: 17.368\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 12.5\tLoss: 35.048\n",
+      "Coord: [ 1.  -0.5]\tAcc: 13\tLoss: 49.634\r"
      ]
     }
    ],
