--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1161,7 +1161,10 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 34.80113636363637\tLoss: 9.307\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 19.886363636363637\tLoss: 17.368\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 12.5\tLoss: 35.048\n",
-      "Coord: [ 1.  -0.5]\tAcc: 13\tLoss: 49.634\r"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 13.068181818181818\tLoss: 35.083\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 23.508522727272727\tLoss: 17.036\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 40.55397727272727\tLoss: 7.872\n",
+      "Coord: [-0.5 -0.4]\tAcc: 60\tLoss: 5.635\r"
      ]
     }
    ],
