--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1272,7 +1272,15 @@
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 90.48295454545455\tLoss: 0.529\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 78.26704545454545\tLoss: 1.169\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 60.22727272727273\tLoss: 2.951\n",
-      "Coord: [ 0.6 -0.3]\tAcc: 58\tLoss: 4.423\r"
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 37.28693181818182\tLoss: 7.596\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 20.3125\tLoss: 19.992\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 22.301136363636363\tLoss: 34.222\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 33.23863636363637\tLoss: 13.559\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 56.39204545454545\tLoss: 4.859\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 77.0596590909091\tLoss: 1.75\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 90.69602272727273\tLoss: 0.486\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.88068181818181\tLoss: 0.152\n",
+      "Coord: [ 0.1 -0.2]\tAcc: 125\tLoss: 0.107\r"
      ]
     }
    ],
