Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1164,7 +1164,10 @@
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 13.068181818181818\tLoss: 35.083\n",
       "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 23.508522727272727\tLoss: 17.036\n",
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 40.55397727272727\tLoss: 7.872\n",
-      "Coord: [-0.5 -0.4]\tAcc: 60\tLoss: 5.635\r"
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 61.22159090909091\tLoss: 3.568\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.01136363636364\tLoss: 1.935\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 76.13636363636364\tLoss: 1.617\n",
+      "Coord: [ 0.1 -0.4]\tAcc: 92\tLoss: 2.1157\r"
      ]
     }
    ],
