Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1167,7 +1167,10 @@
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 61.22159090909091\tLoss: 3.568\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 73.01136363636364\tLoss: 1.935\n",
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 76.13636363636364\tLoss: 1.617\n",
-      "Coord: [ 0.1 -0.4]\tAcc: 92\tLoss: 2.1157\r"
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 67.82670454545455\tLoss: 2.324\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 51.06534090909091\tLoss: 4.679\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 32.88352272727273\tLoss: 9.476\n",
+      "Coord: [ 0.7 -0.4]\tAcc: 29\tLoss: 13.585\r"
      ]
     }
    ],
