Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -660,7 +660,7 @@
       "\tEpoch: 70\tTrain loss: 0.026\tTrain Acc: 99.17655\n",
       "\tEpoch: 70\tTest loss: 1.846\tTest Acc: 78.325255\n",
       "==========================\n",
-      "Epoch: 71 i : 315 and loss: 0.015 acc: 0.9921875\r"
+      "\tEpoch: 71\tTrain loss: 0.03\tTrain Acc: 99.068875\n"
      ]
     }
    ],
