Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1280,7 +1280,14 @@
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 77.0596590909091\tLoss: 1.75\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 90.69602272727273\tLoss: 0.486\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 95.88068181818181\tLoss: 0.152\n",
-      "Coord: [ 0.1 -0.2]\tAcc: 125\tLoss: 0.107\r"
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 91.6903409090909\tLoss: 0.36\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 77.27272727272727\tLoss: 1.309\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 56.53409090909091\tLoss: 3.749\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 31.036931818181817\tLoss: 10.803\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 18.039772727272727\tLoss: 27.695\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 28.62215909090909\tLoss: 18.809\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 47.72727272727273\tLoss: 6.982\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 70.8096590909091\tLoss: 2.483\n"
      ]
     }
    ],
