Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1170,7 +1170,10 @@
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 67.82670454545455\tLoss: 2.324\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 51.06534090909091\tLoss: 4.679\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 32.88352272727273\tLoss: 9.476\n",
-      "Coord: [ 0.7 -0.4]\tAcc: 29\tLoss: 13.585\r"
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 17.045454545454547\tLoss: 19.675\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 11.576704545454545\tLoss: 42.202\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.803977272727273\tLoss: 20.018\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.5\tLoss: 9.352\n"
      ]
     }
    ],
