--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -660,7 +660,10 @@
       "\tEpoch: 70\tTrain loss: 0.026\tTrain Acc: 99.17655\n",
       "\tEpoch: 70\tTest loss: 1.846\tTest Acc: 78.325255\n",
       "==========================\n",
-      "\tEpoch: 71\tTrain loss: 0.03\tTrain Acc: 99.068875\n"
+      "\tEpoch: 71\tTrain loss: 0.03\tTrain Acc: 99.068875\n",
+      "\tEpoch: 71\tTest loss: 1.878\tTest Acc: 78.985755\n",
+      "==========================\n",
+      "Epoch: 72 i : 31 and loss: 0.002 acc: 1.0765625\r"
      ]
     }
    ],
