Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1173,7 +1173,10 @@
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 17.045454545454547\tLoss: 19.675\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 11.576704545454545\tLoss: 42.202\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 21.803977272727273\tLoss: 20.018\n",
-      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.5\tLoss: 9.352\n"
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.5\tLoss: 9.352\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 59.65909090909091\tLoss: 3.686\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 77.41477272727273\tLoss: 1.409\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.29261363636364\tLoss: 0.735\n"
      ]
     }
    ],
