Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1287,7 +1287,15 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 18.039772727272727\tLoss: 27.695\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 28.62215909090909\tLoss: 18.809\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 47.72727272727273\tLoss: 6.982\n",
-      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 70.8096590909091\tLoss: 2.483\n"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 70.8096590909091\tLoss: 2.483\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 87.71306818181819\tLoss: 0.666\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.58522727272727\tLoss: 0.088\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 98.4375\tLoss: 0.064\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 89.98579545454545\tLoss: 0.424\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 71.23579545454545\tLoss: 1.865\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 46.44886363636363\tLoss: 5.685\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 23.295454545454547\tLoss: 16.091\n",
+      "Coord: [ 1.  -0.1]\tAcc: 24\tLoss: 26.328\r"
      ]
     }
    ],
