--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1176,7 +1176,10 @@
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 37.5\tLoss: 9.352\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 59.65909090909091\tLoss: 3.686\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 77.41477272727273\tLoss: 1.409\n",
-      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.29261363636364\tLoss: 0.735\n"
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.29261363636364\tLoss: 0.735\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 85.51136363636364\tLoss: 0.796\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.21875\tLoss: 1.736\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 50.21306818181818\tLoss: 4.664\n"
      ]
     }
    ],
