Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1179,7 +1179,10 @@
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 86.29261363636364\tLoss: 0.735\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 85.51136363636364\tLoss: 0.796\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 74.21875\tLoss: 1.736\n",
-      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 50.21306818181818\tLoss: 4.664\n"
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 50.21306818181818\tLoss: 4.664\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 29.261363636363637\tLoss: 10.73\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 14.701704545454545\tLoss: 23.742\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 19.744318181818183\tLoss: 24.44\n"
      ]
     }
    ],
