Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -663,7 +663,9 @@
       "\tEpoch: 71\tTrain loss: 0.03\tTrain Acc: 99.068875\n",
       "\tEpoch: 71\tTest loss: 1.878\tTest Acc: 78.985755\n",
       "==========================\n",
-      "Epoch: 72 i : 364 and loss: 0.017 acc: 0.9843755\r"
+      "\tEpoch: 72\tTrain loss: 0.03\tTrain Acc: 98.986875\n",
+      "\tEpoch: 72\tTest loss: 1.774\tTest Acc: 79.181255\n",
+      "==========================\n"
      ]
     }
    ],
