Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1182,7 +1182,11 @@
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 50.21306818181818\tLoss: 4.664\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 29.261363636363637\tLoss: 10.73\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 14.701704545454545\tLoss: 23.742\n",
-      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 19.744318181818183\tLoss: 24.44\n"
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 19.744318181818183\tLoss: 24.44\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 31.74715909090909\tLoss: 12.008\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 53.125\tLoss: 4.865\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 76.5625\tLoss: 1.495\n",
+      "Coord: [-0.3 -0.2]\tAcc: 104\tLoss: 0.834\r"
      ]
     }
    ],
