Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1295,7 +1295,14 @@
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 71.23579545454545\tLoss: 1.865\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 46.44886363636363\tLoss: 5.685\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 23.295454545454547\tLoss: 16.091\n",
-      "Coord: [ 1.  -0.1]\tAcc: 24\tLoss: 26.328\r"
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 24.360795454545453\tLoss: 27.083\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 38.42329545454545\tLoss: 10.987\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 61.29261363636363\tLoss: 3.914\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 81.60511363636364\tLoss: 1.161\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 95.8096590909091\tLoss: 0.166\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 96.5909090909091\tLoss: 0.141\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 82.88352272727273\tLoss: 0.866\n"
      ]
     }
    ],
