Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -665,7 +665,8 @@
       "==========================\n",
       "\tEpoch: 72\tTrain loss: 0.03\tTrain Acc: 98.986875\n",
       "\tEpoch: 72\tTest loss: 1.774\tTest Acc: 79.181255\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 73 i : 81 and loss: 0.063 acc: 0.9843755\r"
      ]
     }
    ],
