Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1186,7 +1186,10 @@
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 31.74715909090909\tLoss: 12.008\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 53.125\tLoss: 4.865\n",
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 76.5625\tLoss: 1.495\n",
-      "Coord: [-0.3 -0.2]\tAcc: 104\tLoss: 0.834\r"
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 91.1221590909091\tLoss: 0.409\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 94.95738636363636\tLoss: 0.22\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 90.05681818181819\tLoss: 0.454\n",
+      "Coord: [ 0.3 -0.2]\tAcc: 113\tLoss: 0.631\r"
      ]
     }
    ],
