Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1189,7 +1189,10 @@
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 91.1221590909091\tLoss: 0.409\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 94.95738636363636\tLoss: 0.22\n",
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 90.05681818181819\tLoss: 0.454\n",
-      "Coord: [ 0.3 -0.2]\tAcc: 113\tLoss: 0.631\r"
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 72.79829545454545\tLoss: 1.869\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.52556818181818\tLoss: 5.497\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 24.71590909090909\tLoss: 13.145\n",
+      "Coord: [ 0.9 -0.2]\tAcc: 21\tLoss: 19.499\r"
      ]
     }
    ],
