Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1302,7 +1302,15 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 95.8096590909091\tLoss: 0.166\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 96.5909090909091\tLoss: 0.141\n",
-      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 82.88352272727273\tLoss: 0.866\n"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 82.88352272727273\tLoss: 0.866\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 61.36363636363637\tLoss: 3.139\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 33.38068181818182\tLoss: 9.28\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 19.53125\tLoss: 24.873\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 31.960227272727273\tLoss: 17.197\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 48.86363636363637\tLoss: 6.593\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 70.95170454545455\tLoss: 2.264\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 89.70170454545455\tLoss: 0.51\n",
+      "Coord: [-0.2  0.1]\tAcc: 122\tLoss: 0.285\r"
      ]
     }
    ],
