--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1192,7 +1192,10 @@
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 72.79829545454545\tLoss: 1.869\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 45.52556818181818\tLoss: 5.497\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 24.71590909090909\tLoss: 13.145\n",
-      "Coord: [ 0.9 -0.2]\tAcc: 21\tLoss: 19.499\r"
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 13.352272727272727\tLoss: 30.306\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 27.84090909090909\tLoss: 15.941\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 43.53693181818182\tLoss: 7.229\n",
+      "Coord: [-0.5 -0.1]\tAcc: 94\tLoss: 1.728\r"
      ]
     }
    ],
