Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -666,7 +666,8 @@
       "\tEpoch: 72\tTrain loss: 0.03\tTrain Acc: 98.986875\n",
       "\tEpoch: 72\tTest loss: 1.774\tTest Acc: 79.181255\n",
       "==========================\n",
-      "Epoch: 73 i : 331 and loss: 0.004 acc: 1.0218755\r"
+      "\tEpoch: 73\tTrain loss: 0.033\tTrain Acc: 98.98875\n",
+      "Epoch: 73 i : 35 and loss: 2.049 acc: 0.7343755\r"
      ]
     }
    ],
