--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1195,7 +1195,10 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 13.352272727272727\tLoss: 30.306\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 27.84090909090909\tLoss: 15.941\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 43.53693181818182\tLoss: 7.229\n",
-      "Coord: [-0.5 -0.1]\tAcc: 94\tLoss: 1.728\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 69.2471590909091\tLoss: 2.333\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 89.91477272727273\tLoss: 0.515\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.08\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.069\n"
      ]
     }
    ],
