--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -667,7 +667,9 @@
       "\tEpoch: 72\tTest loss: 1.774\tTest Acc: 79.181255\n",
       "==========================\n",
       "\tEpoch: 73\tTrain loss: 0.033\tTrain Acc: 98.98875\n",
-      "Epoch: 73 i : 35 and loss: 2.049 acc: 0.7343755\r"
+      "\tEpoch: 73\tTest loss: 1.653\tTest Acc: 79.346255\n",
+      "==========================\n",
+      "Epoch: 74 i : 47 and loss: 0.0 acc: 1.0.0921875\r"
      ]
     }
    ],
