Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1198,7 +1198,10 @@
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 69.2471590909091\tLoss: 2.333\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 89.91477272727273\tLoss: 0.515\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.08\n",
-      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.069\n"
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.069\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 89.63068181818181\tLoss: 0.528\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 66.61931818181819\tLoss: 2.484\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 40.625\tLoss: 7.001\n"
      ]
     }
    ],
