Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1310,7 +1310,20 @@
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 48.86363636363637\tLoss: 6.593\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 70.95170454545455\tLoss: 2.264\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 89.70170454545455\tLoss: 0.51\n",
-      "Coord: [-0.2  0.1]\tAcc: 122\tLoss: 0.285\r"
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 98.4375\tLoss: 0.059\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 98.65056818181819\tLoss: 0.045\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 90.41193181818181\tLoss: 0.387\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 71.51988636363636\tLoss: 1.818\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 47.37215909090909\tLoss: 5.419\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 24.786931818181817\tLoss: 15.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 22.088068181818183\tLoss: 29.481\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 36.29261363636363\tLoss: 11.94\n"
      ]
     }
    ],
