Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1201,7 +1201,10 @@
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 97.30113636363636\tLoss: 0.069\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 89.63068181818181\tLoss: 0.528\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 66.61931818181819\tLoss: 2.484\n",
-      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 40.625\tLoss: 7.001\n"
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 40.625\tLoss: 7.001\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 19.105113636363637\tLoss: 16.966\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 24.21875\tLoss: 22.621\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 34.01988636363637\tLoss: 11.206\n"
      ]
     }
    ],
