Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1204,7 +1204,10 @@
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 40.625\tLoss: 7.001\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 19.105113636363637\tLoss: 16.966\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 24.21875\tLoss: 22.621\n",
-      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 34.01988636363637\tLoss: 11.206\n"
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 34.01988636363637\tLoss: 11.206\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 56.17897727272727\tLoss: 4.179\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 82.03125\tLoss: 1.125\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 96.16477272727273\tLoss: 0.149\n"
      ]
     }
    ],
