--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1323,7 +1323,15 @@
      "output_type": "stream",
      "text": [
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 22.088068181818183\tLoss: 29.481\n",
-      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 36.29261363636363\tLoss: 11.94\n"
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 36.29261363636363\tLoss: 11.94\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 56.46306818181818\tLoss: 4.24\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 78.97727272727273\tLoss: 1.359\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 94.2471590909091\tLoss: 0.247\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 97.79829545454545\tLoss: 0.089\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 94.17613636363636\tLoss: 0.253\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 79.04829545454545\tLoss: 1.122\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 57.88352272727273\tLoss: 3.644\n",
+      "Coord: [0.7 0.2]\tAcc: 56\tLoss: 5.872\r"
      ]
     }
    ],
