Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1207,7 +1207,11 @@
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 34.01988636363637\tLoss: 11.206\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 56.17897727272727\tLoss: 4.179\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 82.03125\tLoss: 1.125\n",
-      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 96.16477272727273\tLoss: 0.149\n"
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 96.16477272727273\tLoss: 0.149\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 96.875\tLoss: 0.109\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 83.0965909090909\tLoss: 0.961\n",
+      "Coord: [0.5 0. ]\tAcc: 95\tLoss: 1.492\r"
      ]
     }
    ],
