Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -669,7 +669,10 @@
       "\tEpoch: 73\tTrain loss: 0.033\tTrain Acc: 98.98875\n",
       "\tEpoch: 73\tTest loss: 1.653\tTest Acc: 79.346255\n",
       "==========================\n",
-      "Epoch: 74 i : 379 and loss: 0.015 acc: 0.9921875\r"
+      "\tEpoch: 74\tTrain loss: 0.025\tTrain Acc: 99.22655\n",
+      "\tEpoch: 74\tTest loss: 1.82\tTest Acc: 79.2421875\n",
+      "==========================\n",
+      "Epoch: 75 i : 12 and loss: 0.005 acc: 1.021875\r"
      ]
     }
    ],
