--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1214,7 +1214,10 @@
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 57.67045454545455\tLoss: 3.678\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 31.178977272727273\tLoss: 9.436\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 15.553977272727273\tLoss: 22.347\n",
-      "Coord: [-1.   0.1]\tAcc: 27\tLoss: 23.741\r"
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.62784090909091\tLoss: 16.61\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 43.25284090909091\tLoss: 7.773\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 67.75568181818181\tLoss: 2.575\n",
+      "Coord: [-0.4  0.1]\tAcc: 99\tLoss: 1.3851\r"
      ]
     }
    ],
