--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1331,7 +1331,15 @@
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 94.17613636363636\tLoss: 0.253\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 79.04829545454545\tLoss: 1.122\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 57.88352272727273\tLoss: 3.644\n",
-      "Coord: [0.7 0.2]\tAcc: 56\tLoss: 5.872\r"
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 34.16193181818182\tLoss: 9.598\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 19.673295454545453\tLoss: 24.838\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 26.84659090909091\tLoss: 21.896\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 41.40625\tLoss: 8.366\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 64.63068181818181\tLoss: 2.969\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 83.23863636363636\tLoss: 0.893\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 93.82102272727273\tLoss: 0.272\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 92.25852272727273\tLoss: 0.316\n",
+      "Coord: [0.2 0.3]\tAcc: 114\tLoss: 0.578\r"
      ]
     }
    ],
