Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1217,7 +1217,10 @@
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 27.62784090909091\tLoss: 16.61\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 43.25284090909091\tLoss: 7.773\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 67.75568181818181\tLoss: 2.575\n",
-      "Coord: [-0.4  0.1]\tAcc: 99\tLoss: 1.3851\r"
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 88.21022727272727\tLoss: 0.577\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 98.08238636363636\tLoss: 0.074\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 98.36647727272727\tLoss: 0.056\n",
+      "Coord: [0.3 0.1]\tAcc: 115\tLoss: 0.569\r"
      ]
     }
    ],
