Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1220,7 +1220,10 @@
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 88.21022727272727\tLoss: 0.577\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 98.08238636363636\tLoss: 0.074\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 98.36647727272727\tLoss: 0.056\n",
-      "Coord: [0.3 0.1]\tAcc: 115\tLoss: 0.569\r"
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 91.33522727272727\tLoss: 0.391\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 71.44886363636364\tLoss: 1.938\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 45.38352272727273\tLoss: 5.628\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 24.928977272727273\tLoss: 13.249\n"
      ]
     }
    ],
