Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1339,7 +1339,14 @@
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 83.23863636363636\tLoss: 0.893\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 93.82102272727273\tLoss: 0.272\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 92.25852272727273\tLoss: 0.316\n",
-      "Coord: [0.2 0.3]\tAcc: 114\tLoss: 0.578\r"
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 83.02556818181819\tLoss: 0.835\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 65.3409090909091\tLoss: 2.63\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 42.82670454545455\tLoss: 6.911\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 24.360795454545453\tLoss: 16.843\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.957386363636363\tLoss: 41.174\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.397727272727273\tLoss: 16.613\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 45.73863636363637\tLoss: 6.437\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 67.32954545454545\tLoss: 2.417\n"
      ]
     }
    ],
