--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -672,7 +672,8 @@
       "\tEpoch: 74\tTrain loss: 0.025\tTrain Acc: 99.22655\n",
       "\tEpoch: 74\tTest loss: 1.82\tTest Acc: 79.2421875\n",
       "==========================\n",
-      "Epoch: 75 i : 345 and loss: 0.01 acc: 1.09218755\r"
+      "\tEpoch: 75\tTrain loss: 0.022\tTrain Acc: 99.31875\n",
+      "Epoch: 75 i : 63 and loss: 1.499 acc: 0.8046875\r"
      ]
     }
    ],
