--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1225,6 +1225,15 @@
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 45.38352272727273\tLoss: 5.628\n",
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 24.928977272727273\tLoss: 13.249\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 22.15909090909091\tLoss: 27.644\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.09659090909091\tLoss: 12.861\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 51.34943181818182\tLoss: 5.483\n"
+     ]
     }
    ],
    "source": [
