Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -673,7 +673,9 @@
       "\tEpoch: 74\tTest loss: 1.82\tTest Acc: 79.2421875\n",
       "==========================\n",
       "\tEpoch: 75\tTrain loss: 0.022\tTrain Acc: 99.31875\n",
-      "Epoch: 75 i : 63 and loss: 1.499 acc: 0.8046875\r"
+      "\tEpoch: 75\tTest loss: 1.823\tTest Acc: 77.995755\n",
+      "==========================\n",
+      "Epoch: 76 i : 61 and loss: 0.008 acc: 1.0609375\r"
      ]
     }
    ],
