Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1232,7 +1232,10 @@
      "text": [
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 22.15909090909091\tLoss: 27.644\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 33.09659090909091\tLoss: 12.861\n",
-      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 51.34943181818182\tLoss: 5.483\n"
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 51.34943181818182\tLoss: 5.483\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 74.28977272727273\tLoss: 1.816\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 90.98011363636364\tLoss: 0.406\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.45454545454545\tLoss: 0.16\n"
      ]
     }
    ],
