Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1346,7 +1346,15 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.957386363636363\tLoss: 41.174\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 30.397727272727273\tLoss: 16.613\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 45.73863636363637\tLoss: 6.437\n",
-      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 67.32954545454545\tLoss: 2.417\n"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 67.32954545454545\tLoss: 2.417\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 83.3096590909091\tLoss: 0.901\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 87.0028409090909\tLoss: 0.65\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 80.7528409090909\tLoss: 1.003\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 68.39488636363636\tLoss: 2.27\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 49.50284090909091\tLoss: 5.572\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 28.551136363636363\tLoss: 12.951\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 17.755681818181817\tLoss: 30.62\n",
+      "Coord: [-1.   0.5]\tAcc: 35\tLoss: 47.781\r"
      ]
     }
    ],
