--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1235,7 +1235,11 @@
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 51.34943181818182\tLoss: 5.483\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 74.28977272727273\tLoss: 1.816\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 90.98011363636364\tLoss: 0.406\n",
-      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.45454545454545\tLoss: 0.16\n"
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 95.45454545454545\tLoss: 0.16\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 92.32954545454545\tLoss: 0.341\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 78.97727272727273\tLoss: 1.332\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 56.96022727272727\tLoss: 3.857\n",
+      "Coord: [0.7 0.2]\tAcc: 54\tLoss: 5.436\r"
      ]
     }
    ],
