--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1239,7 +1239,10 @@
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 92.32954545454545\tLoss: 0.341\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 78.97727272727273\tLoss: 1.332\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 56.96022727272727\tLoss: 3.857\n",
-      "Coord: [0.7 0.2]\tAcc: 54\tLoss: 5.436\r"
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 34.94318181818182\tLoss: 8.872\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 19.105113636363637\tLoss: 19.122\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 24.71590909090909\tLoss: 23.41\n",
+      "Coord: [-0.8  0.3]\tAcc: 34\tLoss: 15.627\r"
      ]
     }
    ],
