Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -675,7 +675,7 @@
       "\tEpoch: 75\tTrain loss: 0.022\tTrain Acc: 99.31875\n",
       "\tEpoch: 75\tTest loss: 1.823\tTest Acc: 77.995755\n",
       "==========================\n",
-      "Epoch: 76 i : 311 and loss: 0.015 acc: 0.9921875\r"
+      "\tEpoch: 76\tTrain loss: 0.033\tTrain Acc: 98.98625\n"
      ]
     }
    ],
