--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1242,7 +1242,10 @@
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 34.94318181818182\tLoss: 8.872\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 19.105113636363637\tLoss: 19.122\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 24.71590909090909\tLoss: 23.41\n",
-      "Coord: [-0.8  0.3]\tAcc: 34\tLoss: 15.627\r"
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 38.92045454545455\tLoss: 10.738\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 57.74147727272727\tLoss: 4.501\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 75.14204545454545\tLoss: 1.643\n",
+      "Coord: [-0.2  0.3]\tAcc: 104\tLoss: 0.959\r"
      ]
     }
    ],
