Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1245,7 +1245,10 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 38.92045454545455\tLoss: 10.738\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 57.74147727272727\tLoss: 4.501\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 75.14204545454545\tLoss: 1.643\n",
-      "Coord: [-0.2  0.3]\tAcc: 104\tLoss: 0.959\r"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.0028409090909\tLoss: 0.682\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 87.64204545454545\tLoss: 0.651\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 77.20170454545455\tLoss: 1.452\n",
+      "Coord: [0.4 0.3]\tAcc: 91\tLoss: 2.155\r"
      ]
     }
    ],
