--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -675,7 +675,10 @@
       "\tEpoch: 75\tTrain loss: 0.022\tTrain Acc: 99.31875\n",
       "\tEpoch: 75\tTest loss: 1.823\tTest Acc: 77.995755\n",
       "==========================\n",
-      "\tEpoch: 76\tTrain loss: 0.033\tTrain Acc: 98.98625\n"
+      "\tEpoch: 76\tTrain loss: 0.033\tTrain Acc: 98.98625\n",
+      "\tEpoch: 76\tTest loss: 1.755\tTest Acc: 78.310625\n",
+      "==========================\n",
+      "Epoch: 77 i : 26 and loss: 0.005 acc: 1.0765625\r"
      ]
     }
    ],
