--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1354,7 +1354,14 @@
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 49.50284090909091\tLoss: 5.572\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 28.551136363636363\tLoss: 12.951\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 17.755681818181817\tLoss: 30.62\n",
-      "Coord: [-1.   0.5]\tAcc: 35\tLoss: 47.781\r"
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 22.869318181818183\tLoss: 33.669\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 33.38068181818182\tLoss: 13.514\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 49.07670454545455\tLoss: 5.739\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 65.98011363636364\tLoss: 2.497\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 75.56818181818181\tLoss: 1.463\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 75.92329545454545\tLoss: 1.531\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 65.41193181818181\tLoss: 2.594\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 49.36079545454545\tLoss: 5.253\n"
      ]
     }
    ],
