--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1248,7 +1248,10 @@
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 87.0028409090909\tLoss: 0.682\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 87.64204545454545\tLoss: 0.651\n",
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 77.20170454545455\tLoss: 1.452\n",
-      "Coord: [0.4 0.3]\tAcc: 91\tLoss: 2.155\r"
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 59.23295454545455\tLoss: 3.462\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 39.70170454545455\tLoss: 7.031\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 24.431818181818183\tLoss: 14.092\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.602272727272727\tLoss: 43.897\n"
      ]
     }
    ],
