Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1361,7 +1361,15 @@
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 75.56818181818181\tLoss: 1.463\n",
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 75.92329545454545\tLoss: 1.531\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 65.41193181818181\tLoss: 2.594\n",
-      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 49.36079545454545\tLoss: 5.253\n"
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 49.36079545454545\tLoss: 5.253\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 31.605113636363637\tLoss: 10.976\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 21.09375\tLoss: 24.089\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 20.59659090909091\tLoss: 69.181\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 25.852272727272727\tLoss: 29.039\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 34.65909090909091\tLoss: 12.684\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 48.65056818181818\tLoss: 5.84\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 60.86647727272727\tLoss: 3.271\n",
+      "Coord: [-0.1  0.6]\tAcc: 77\tLoss: 3.035\r"
      ]
     }
    ],
