Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1251,7 +1251,10 @@
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 59.23295454545455\tLoss: 3.462\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 39.70170454545455\tLoss: 7.031\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 24.431818181818183\tLoss: 14.092\n",
-      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.602272727272727\tLoss: 43.897\n"
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.602272727272727\tLoss: 43.897\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 27.556818181818183\tLoss: 21.639\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 39.98579545454545\tLoss: 10.044\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 55.89488636363637\tLoss: 4.594\n"
      ]
     }
    ],
