Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1254,7 +1254,10 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 19.602272727272727\tLoss: 43.897\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 27.556818181818183\tLoss: 21.639\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 39.98579545454545\tLoss: 10.044\n",
-      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 55.89488636363637\tLoss: 4.594\n"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 55.89488636363637\tLoss: 4.594\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 69.74431818181819\tLoss: 2.279\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 75.14204545454545\tLoss: 1.671\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 71.30681818181819\tLoss: 2.079\n"
      ]
     }
    ],
