--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -678,7 +678,9 @@
       "\tEpoch: 76\tTrain loss: 0.033\tTrain Acc: 98.98625\n",
       "\tEpoch: 76\tTest loss: 1.755\tTest Acc: 78.310625\n",
       "==========================\n",
-      "Epoch: 77 i : 359 and loss: 0.055 acc: 0.9921875\r"
+      "\tEpoch: 77\tTrain loss: 0.029\tTrain Acc: 99.05875\n",
+      "\tEpoch: 77\tTest loss: 1.688\tTest Acc: 79.362525\n",
+      "==========================\n"
      ]
     }
    ],
