Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1257,7 +1257,10 @@
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 55.89488636363637\tLoss: 4.594\n",
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 69.74431818181819\tLoss: 2.279\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 75.14204545454545\tLoss: 1.671\n",
-      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 71.30681818181819\tLoss: 2.079\n"
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 71.30681818181819\tLoss: 2.079\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 57.88352272727273\tLoss: 3.884\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 42.04545454545455\tLoss: 6.856\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 27.05965909090909\tLoss: 11.758\n"
      ]
     }
    ],
