Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1369,7 +1369,15 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 34.65909090909091\tLoss: 12.684\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 48.65056818181818\tLoss: 5.84\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 60.86647727272727\tLoss: 3.271\n",
-      "Coord: [-0.1  0.6]\tAcc: 77\tLoss: 3.035\r"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 64.3465909090909\tLoss: 2.853\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 58.66477272727273\tLoss: 3.577\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 46.23579545454545\tLoss: 5.946\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 33.30965909090909\tLoss: 10.827\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 23.366477272727273\tLoss: 21.315\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 16.90340909090909\tLoss: 44.541\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 19.744318181818183\tLoss: 63.484\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 26.136363636363637\tLoss: 27.467\n",
+      "Coord: [-0.6  0.7]\tAcc: 49\tLoss: 15.824\r"
      ]
     }
    ],
