Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -680,7 +680,8 @@
       "==========================\n",
       "\tEpoch: 77\tTrain loss: 0.029\tTrain Acc: 99.05875\n",
       "\tEpoch: 77\tTest loss: 1.688\tTest Acc: 79.362525\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 78 i : 75 and loss: 0.006 acc: 1.0765625\r"
      ]
     }
    ],
