Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1260,7 +1260,11 @@
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 71.30681818181819\tLoss: 2.079\n",
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 57.88352272727273\tLoss: 3.884\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 42.04545454545455\tLoss: 6.856\n",
-      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 27.05965909090909\tLoss: 11.758\n"
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 27.05965909090909\tLoss: 11.758\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 17.116477272727273\tLoss: 23.7\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 18.46590909090909\tLoss: 41.394\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 26.84659090909091\tLoss: 22.096\n",
+      "Coord: [-0.6  0.5]\tAcc: 38\tLoss: 15.254\r"
      ]
     }
    ],
