Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1264,7 +1264,10 @@
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 17.116477272727273\tLoss: 23.7\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 18.46590909090909\tLoss: 41.394\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 26.84659090909091\tLoss: 22.096\n",
-      "Coord: [-0.6  0.5]\tAcc: 38\tLoss: 15.254\r"
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 37.99715909090909\tLoss: 10.976\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 48.79261363636363\tLoss: 5.756\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 58.38068181818182\tLoss: 3.876\n",
+      "Coord: [0.  0.5]\tAcc: 74\tLoss: 4.288\r"
      ]
     }
    ],
