Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1377,7 +1377,14 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 16.90340909090909\tLoss: 44.541\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 19.744318181818183\tLoss: 63.484\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 26.136363636363637\tLoss: 27.467\n",
-      "Coord: [-0.6  0.7]\tAcc: 49\tLoss: 15.824\r"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 34.23295454545455\tLoss: 12.831\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 45.17045454545455\tLoss: 6.723\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 50.78125\tLoss: 5.191\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 49.07670454545455\tLoss: 5.694\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 39.0625\tLoss: 7.843\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 30.96590909090909\tLoss: 12.191\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 22.65625\tLoss: 21.493\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 17.400568181818183\tLoss: 41.023\n"
      ]
     }
    ],
