Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1267,7 +1267,10 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 37.99715909090909\tLoss: 10.976\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 48.79261363636363\tLoss: 5.756\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 58.38068181818182\tLoss: 3.876\n",
-      "Coord: [0.  0.5]\tAcc: 74\tLoss: 4.288\r"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 60.08522727272727\tLoss: 3.658\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 52.20170454545455\tLoss: 4.889\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 40.41193181818182\tLoss: 7.857\n",
+      "Coord: [0.6 0.5]\tAcc: 51\tLoss: 8.8132\r"
      ]
     }
    ],
