Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -681,7 +681,8 @@
       "\tEpoch: 77\tTrain loss: 0.029\tTrain Acc: 99.05875\n",
       "\tEpoch: 77\tTest loss: 1.688\tTest Acc: 79.362525\n",
       "==========================\n",
-      "Epoch: 78 i : 324 and loss: 0.105 acc: 0.9687575\r"
+      "\tEpoch: 78\tTrain loss: 0.036\tTrain Acc: 98.88655\n",
+      "Epoch: 78 i : 22 and loss: 1.548 acc: 0.8046875\r"
      ]
     }
    ],
