Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1270,7 +1270,10 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 60.08522727272727\tLoss: 3.658\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 52.20170454545455\tLoss: 4.889\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 40.41193181818182\tLoss: 7.857\n",
-      "Coord: [0.6 0.5]\tAcc: 51\tLoss: 8.8132\r"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 26.988636363636363\tLoss: 11.425\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 16.90340909090909\tLoss: 19.741\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 14.630681818181818\tLoss: 73.861\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 18.536931818181817\tLoss: 42.591\n"
      ]
     }
    ],
