--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -682,7 +682,9 @@
       "\tEpoch: 77\tTest loss: 1.688\tTest Acc: 79.362525\n",
       "==========================\n",
       "\tEpoch: 78\tTrain loss: 0.036\tTrain Acc: 98.88655\n",
-      "Epoch: 78 i : 22 and loss: 1.548 acc: 0.8046875\r"
+      "\tEpoch: 78\tTest loss: 1.792\tTest Acc: 78.685575\n",
+      "==========================\n",
+      "Epoch: 79 i : 41 and loss: 0.068 acc: 0.9843755\r"
      ]
     }
    ],
