Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1384,7 +1384,15 @@
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 39.0625\tLoss: 7.843\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 30.96590909090909\tLoss: 12.191\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 22.65625\tLoss: 21.493\n",
-      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 17.400568181818183\tLoss: 41.023\n"
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 17.400568181818183\tLoss: 41.023\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 16.12215909090909\tLoss: 152.335\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 19.53125\tLoss: 62.702\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 26.420454545454547\tLoss: 28.507\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 33.09659090909091\tLoss: 14.051\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 38.92045454545455\tLoss: 9.19\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 37.71306818181818\tLoss: 9.405\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 31.74715909090909\tLoss: 11.782\n",
+      "Coord: [0.3 0.8]\tAcc: 31\tLoss: 14.795\r"
      ]
     }
    ],
