--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1273,7 +1273,10 @@
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 26.988636363636363\tLoss: 11.425\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 16.90340909090909\tLoss: 19.741\n",
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 14.630681818181818\tLoss: 73.861\n",
-      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 18.536931818181817\tLoss: 42.591\n"
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 18.536931818181817\tLoss: 42.591\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 24.21875\tLoss: 24.937\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 32.59943181818182\tLoss: 13.827\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 41.12215909090909\tLoss: 8.224\n"
      ]
     }
    ],
