--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1276,7 +1276,10 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 18.536931818181817\tLoss: 42.591\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 24.21875\tLoss: 24.937\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 32.59943181818182\tLoss: 13.827\n",
-      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 41.12215909090909\tLoss: 8.224\n"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 41.12215909090909\tLoss: 8.224\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 46.73295454545455\tLoss: 6.541\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 44.03409090909091\tLoss: 6.947\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 36.36363636363637\tLoss: 9.135\n"
      ]
     }
    ],
